add_executable(
  xbuddy_extension_yet_another_circular_buffer_tests yet_another_circular_buffer_tests.cpp
  )
target_include_directories(
  xbuddy_extension_yet_another_circular_buffer_tests
  PRIVATE include ${CMAKE_SOURCE_DIR}/src/puppy/xbuddy_extension
  )
add_catch_test(xbuddy_extension_yet_another_circular_buffer_tests)

add_executable(
  xbuddy_extension_cyphal_application_tests
  ${CMAKE_SOURCE_DIR}/src/puppy/xbuddy_extension/cyphal_application.cpp
  ${CMAKE_SOURCE_DIR}/src/puppy/xbuddy_extension/cyphal_nfc_node.cpp
  ${CMAKE_SOURCE_DIR}/src/puppy/xbuddy_extension/master_activity.cpp cyphal_application_tests.cpp
  )
target_include_directories(
  xbuddy_extension_cyphal_application_tests PRIVATE include
                                                    ${CMAKE_SOURCE_DIR}/src/puppy/xbuddy_extension
  )
target_link_libraries(
  xbuddy_extension_cyphal_application_tests
  ac_controller
  anfc
  buddy_utils
  freertos_tests
  tool_offset_sensor
  xbuddy_extension
  )
add_catch_test(xbuddy_extension_cyphal_application_tests)

add_executable(
  cyphal_nfc_node_tests ${CMAKE_SOURCE_DIR}/src/puppy/xbuddy_extension/cyphal_nfc_node.cpp
                        cyphal_nfc_node_tests.cpp
  )
target_link_libraries(cyphal_nfc_node_tests ac_controller anfc)
target_include_directories(
  cyphal_nfc_node_tests PRIVATE ${CMAKE_SOURCE_DIR}/src/puppy/xbuddy_extension
  )
add_catch_test(cyphal_nfc_node_tests)
